[tool.poetry]
name = "criptoUtilLib"
version = "0.1.1"
description = ""
authors = ["juanMaAV92 <juanmanuel.armero@gmail.com>"]
readme = "README.md"
packages = [{include = "src", from = "."}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
