[tool.poetry]
name = "cripto_utils_lib"
version = "0.1.2"
description = ""
authors = ["juanMaAV92 <juanmanuel.armero@gmail.com>"]
readme = "README.md"
packages = [{include = "cripto_utils_lib", from = "."}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
